<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.devops</groupId>
	<artifactId>suc-web</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<description>traffic web</description>
	<build>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<finalName>traffic</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<encoding>utf-8</encoding>
					<source>1.6</source>
					<target>1.6</target>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.26</version>
				<configuration>
					<contextPath>/</contextPath>
					<systemProperties>
						<systemProperty>
							<name>MAVEN_OPTS</name>
							<value>"-Xms512m -Xmx1024m -XX:MaxPermSize=384m"</value>
						</systemProperty>
						<systemProperty>
							<name>JVM-ARG</name>
							<value>"-XX:MaxPermSize=386m"</value>
						</systemProperty>
						<systemProperty>
							<name>JAVA_OPTS</name>
							<value>"-Xms512m -Xmx1024m"</value>
						</systemProperty>
					</systemProperties>
					<webDefaultXml>src/main/resources/webdefault.xml</webDefaultXml>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<additionalProjectnatures>
						<projectnature>
							org.springframework.ide.eclipse.core.springnature
						</projectnature>
					</additionalProjectnatures>
					<additionalBuildcommands>
						<buildcommand>
							org.springframework.ide.eclipse.core.springbuilder
						</buildcommand>
					</additionalBuildcommands>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<wtpversion>1.5</wtpversion>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${springVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${springVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${springVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${springVersion}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${springVersion}</version>
		</dependency>
		<dependency>
			<groupId>c3p0</groupId>
			<artifactId>c3p0</artifactId>
			<version>0.9.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.6.12</version>
		</dependency>
		<dependency>
			<groupId>org.snmp4j</groupId>
			<artifactId>snmp4j</artifactId>
			<version>1.10.1</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.6</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>

		<dependency>
			<groupId>jexcelapi</groupId>
			<artifactId>jxl</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>com.devops</groupId>
			<artifactId>suc-common</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.devops</groupId>
			<artifactId>suc-impl</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.mybatis.caches</groupId>
			<artifactId>mybatis-ehcache</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
	    	<groupId>org.tuckey</groupId>
	    	<artifactId>urlrewritefilter</artifactId>
	    	<version>4.0.3</version>
		</dependency>
		<dependency>
	    	<groupId>commons-fileupload</groupId>
	    	<artifactId>commons-fileupload</artifactId>
	    	<version>1.3.1</version>
		</dependency>	
		<dependency>
	    	<groupId>commons-io</groupId>
	    	<artifactId>commons-io</artifactId>
	    	<version>2.0.1</version>
		</dependency>	
		<dependency>
			<groupId>net.coobird</groupId>
			<artifactId>thumbnailator</artifactId>
			<version>0.4.8</version>
		</dependency>			
	</dependencies>
	<dependencyManagement>
		<dependencies>
		</dependencies>
	</dependencyManagement>

	<properties>
		<springVersion>5.3.19</springVersion>
	</properties>

	<profiles>
		<profile>
			<!-- 线上环境 -->
			<id>product</id>
			<properties>
				<suc_user>lrm</suc_user>
				<suc_passwd>lrm@mysql</suc_passwd>
				<suc_dburl>
					jdbc:mysql://master.mysql.suc.bd.iweju.com:3361,slave.mysql.suc.bd.iweju.com:3361/bd_suc?useUnicode=true&amp;amp;characterEncoding=utf8&amp;amp;autoReconnect=true
				</suc_dburl>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>sysop-util</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>mvn</executable>
									<workingDirectory>../sysop-util</workingDirectory>
									<arguments>
										<argument>install</argument>
										<argument>-Dmaven.test.skip=true</argument>
									</arguments>
								</configuration>
							</execution>

							<execution>
								<id>suc-common</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>mvn</executable>
									<workingDirectory>../suc-common/</workingDirectory>
									<arguments>
										<argument>install</argument>
										<argument>-Dmaven.test.skip=true</argument>
									</arguments>
								</configuration>
							</execution>
							<execution>
								<id>suc-impl</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>mvn</executable>
									<workingDirectory>../suc-impl/</workingDirectory>
									<arguments>
										<argument>install</argument>
										<argument>-Dmaven.test.skip=true</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>			
		</profile>
		
		<profile>
			<!-- csm测试环境变量 -->
			<id>test-properties-csm</id>
			<properties>
				<suc_user>yct_product</suc_user>
				<suc_passwd>idohoo001</suc_passwd>
				<suc_dburl>
					jdbc:mysql://120.24.232.32:3306,120.24.232.32:3306/tp?useUnicode=true&amp;amp;characterEncoding=utf8&amp;amp;autoReconnect=true
				</suc_dburl>
				<upload_dir>C:/temp/traffic_pic/traffic_pic</upload_dir>
				<backup_dir>c:/data/upload_file/traffic_police_backup</backup_dir>
			</properties>
		</profile>
		
		<profile>
			<!-- 测试环境变量 -->
			<id>test-properties</id>
			<properties>
				<suc_user>yct_product</suc_user>
				<suc_passwd>idohoo001</suc_passwd>
				<suc_dburl>
					jdbc:mysql://120.76.84.36:3306,120.76.84.36:3306/traffic_police?useUnicode=true&amp;amp;characterEncoding=utf8&amp;amp;autoReconnect=true
				</suc_dburl>
				<upload_dir>C:/temp/traffic_pic/traffic_pic</upload_dir>
				<backup_dir>c:/data/upload_file/traffic_police_backup</backup_dir>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>suc-common</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>mvn</executable>
									<workingDirectory>../suc-common/</workingDirectory>
									<arguments>
										<argument>install</argument>
										<argument>-Dmaven.test.skip=true</argument>
									</arguments>
								</configuration>
							</execution>
							<execution>
								<id>suc-impl</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>mvn</executable>
									<workingDirectory>../suc-impl/</workingDirectory>
									<arguments>
										<argument>install</argument>
										<argument>-Dmaven.test.skip=true</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>		
		</profile>
		<profile>
			<!-- 测试环境变量 -->
			<id>win-properties</id>
			<properties>
				<suc_user>root</suc_user>
				<suc_passwd>biezhao!@#admin098</suc_passwd>
				<suc_dburl>
					jdbc:mysql://120.24.235.144:3306,120.24.235.144:3306/traffic_police?useUnicode=true&amp;amp;characterEncoding=utf8&amp;amp;autoReconnect=true
				</suc_dburl>
				<upload_dir>E://data//upload_file//traffic_police</upload_dir>
				<backup_dir>/data/upload_file/traffic_police_backup</backup_dir>
			</properties>
		</profile>	
			
		<profile>
		<!-- 客户数据库测试环境变量 -->
			<id>customer-properties</id>
			<properties>
				<suc_user>root</suc_user>
				<suc_passwd>abc123</suc_passwd>
				<suc_dburl>
					jdbc:mysql://localhost:3306,localhost:3306/traffic_police_customer?useUnicode=true&amp;amp;characterEncoding=utf8&amp;amp;autoReconnect=true
				</suc_dburl>
				<upload_dir>G://data//upload_file//traffic_police</upload_dir>
				<backup_dir>/data/upload_file/traffic_police_backup</backup_dir>
			</properties>
		</profile>
		
		<profile>
		<!-- 本地数据库测试环境变量 -->
			<id>local-properties</id>
			<properties>
				<suc_user>root</suc_user>
				<suc_passwd>123456</suc_passwd>
				<suc_dburl>
					jdbc:mysql://localhost:3306,localhost:3306/traffic_police?useUnicode=true&amp;amp;characterEncoding=utf8&amp;amp;autoReconnect=true
				</suc_dburl>
				<upload_dir>E://data//upload_file//traffic_police</upload_dir>
				<backup_dir>/data/upload_file/traffic_police_backup</backup_dir>
			</properties>
		</profile>
		
				
		<profile>
			<!-- 测试环境变量 -->
			<id>yz-properties</id>
			<properties>
				<suc_user>root</suc_user>
				<suc_passwd>abc123</suc_passwd>
				<suc_dburl>
					jdbc:mysql://localhost:3306,localhost:3306/traffic_police?useUnicode=true&amp;amp;characterEncoding=utf8&amp;amp;autoReconnect=true
				</suc_dburl>
				<upload_dir>e:\\traffic_pic\\</upload_dir>
			</properties>
		</profile>
		
		<profile>
			<!-- 个人测试环境变量 -->
			<id>only_test</id>
			<properties>
				<suc_user>root</suc_user>
				<suc_passwd>123456</suc_passwd>
				<suc_dburl>
					jdbc:mysql://localhost:3306,localhost:3306/traffic_police?useUnicode=true&amp;amp;characterEncoding=utf8&amp;amp;autoReconnect=true
				</suc_dburl>
				<upload_dir>e:\\traffic_pic\\</upload_dir>
			</properties>
		</profile>
				
		<profile>
			<!-- 线上环境 -->
			<id>test</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>suc-common</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>mvn</executable>
									<workingDirectory>../suc-common/</workingDirectory>
									<arguments>
										<argument>install</argument>
										<argument>-Dmaven.test.skip=true</argument>
									</arguments>
								</configuration>
							</execution>
							<execution>
								<id>suc-impl</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>mvn</executable>
									<workingDirectory>../suc-impl/</workingDirectory>
									<arguments>
										<argument>install</argument>
										<argument>-Dmaven.test.skip=true</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>	
		</profile>		
	</profiles>
	<repositories>
		<repository>
			<id>idohoo-nexus</id>
			<name>idohoo-nexus</name>
			<url>http://120.76.84.36:8081/nexus/content/groups/public</url>
			<layout>default</layout>
			<releases>
				<updatePolicy>always</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<updatePolicy>always</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>idohoo-nexus</id>
			<name>idohoo-nexus</name>
			<url>http://120.76.84.36:8081/nexus/content/groups/public</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>